--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -521,6 +521,8 @@
     }
 
   .home-padding {
-    padding: 60px 0; } }
+    padding: 100px 0;
+  }
+}
 
 /*# sourceMappingURL=responsive.css.map */
